TAG: femover-5-1-2-5
TAG: femover-5-1-2-4
TAG: femover-5-1-2-3
TAG: femover-5-1-2-2
TAG: femover-5-1-2-1
DATE: 1/3/13 -> 1/14/13
STAFF: lec/dbm/pf
CHANGES:
1) 5.12 build tag
2) lib/python/Dispatcher.py removed; same as lib_py_misc/Dispatcher.py

TAG: femover-5-1-1-3
DATE: 12/31/12
STAFF: jsb
CHANGES:
1) added lib/python/GroupedList.py to support #3 below
2) updated gather/Gatherer.py's MultiFileGatherer to allow individual files to be written as they are produced, rather than saving all in memory until all are done
3) updated gather/vocabulary_gatherer.py to use far less memory when processing annotations down the DAG, preventing memory blowout on current production data

TAG: femover-tr6519-BP
DATE: 11/28/12
STAFF: jsb
CHANGES:
1) branch point for N-to-M Ortholog release (TR6519)

TAG: femover-5-1-1-2
DATE: 11/06/12
STAFF: dbm
CHANGES:
1) 5.11 release tag

TAG: femover-5-1-1-1
DATE: 11/06/12
STAFF: jsb
CHANGES:
1) merged C4AM changes (tr7106 branch) into the trunk

TAG: femover-5-1-0-7
DATE: 9/25/12
STAFF: dbm
CHANGES:
1) schema/marker_note.py: removed the 64,000 size of the note field so it can
   be unlimited to handle large GO text

TAG: femover-5-1-0-6
DATE: 9/21/12
STAFF: dbm
CHANGES:
1) Configuration.default: updated IMSR_COUNT_URL

TAG: femover-5-1-0-5
TAG: femover-5-1-0-4
TAG: femover-5-1-0-3
DATE: 08/30/2012
STAFF: lec
CHANGES: 
TR11150/scrum-dog TR10273:
added:
where exists (select 1 from GXD_Expression e where a._Assay_key = e._Assay_key)

expression_assay_gatherer.py
expression_result_summary_gatherer.py
expression_assay_sequence_num_gatherer.py
expression_imagepane_gatherer.py
expression_index_counts_gatherer.py
expression_index_gatherer.py
expression_index_sequence_num_gatherer.py
expression_index_stages_gatherer.py
recombinase_gatherer.py
accession_gatherer.py
image_sequence_num_gatherer.py
marker_counts_gatherer.py
marker_count_sets_gatherer.py
marker_to_expression_assay_gatherer.py
reference_counts_gatherer.py

TAG: femover-tr10273-BP