@@ -105,7 +105,7 @@ class AssayGatherer (Gatherer.Gatherer):
 			key = row[assayCol]
 
 			if row[nameCol]:
-				antibody[key] = row[nameCol]
+				antibody[key] = (row[antibodyCol], row[nameCol])
 
 				secondary = Gatherer.resolve (
 					row[secondaryCol],
@@ -167,6 +167,7 @@ class AssayGatherer (Gatherer.Gatherer):
 			isDirectDetection = 0
 			note = None
 			detectionSystem = None
+			antibodyKey = None
 			antibodyName = None
 			reporter = None
 			image = 0
@@ -184,7 +185,7 @@ class AssayGatherer (Gatherer.Gatherer):
 			if system.has_key(key):
 				detectionSystem = system[key]
 			if antibody.has_key(key):
-				antibodyName = antibody[key]
+				(antibodyKey, antibodyName) = antibody[key]
 			if hasImage.has_key(key):
 				image = 1
 
@@ -205,6 +206,7 @@ class AssayGatherer (Gatherer.Gatherer):
 			self.addColumn ('note', note, row, cols)
 			self.addColumn ('detection_system', detectionSystem,
 				row, cols)
+			self.addColumn ('_Antibody_key', antibodyKey, row, cols)
 			self.addColumn ('antibody', antibodyName, row, cols)
 			self.addColumn ('assay_type', assayType, row, cols)
 			self.addColumn ('reporter_gene', reporter, row, cols)
@@ -281,8 +283,8 @@ cmds = [
 
 # order of fields (from the query results) to be written to the
 # output file
-fieldOrder = [ '_Assay_key', 'assay_type', 'assay_id', '_Probe_key',
-	'probe_name', 'antibody', 'detection_system', 'is_direct_detection',
+fieldOrder = [ '_Assay_key', 'assay_type', 'assay_id', '_Probe_key', 'probe_name', 
+        '_Antibody_key', 'antibody', 'detection_system', 'is_direct_detection',
 	'probe_preparation', 'visualized_with', 'reporter_gene', 'note',
 	'has_image', '_Refs_key', 
 	'_Marker_key', 'marker_id', 'symbol', 'marker_name', 'modification_date',
