@@ -19,6 +19,7 @@ createStatement = '''CREATE TABLE %s  (
 	primary_id		varchar(40)	null,
 	probe_key		int		null,
 	probe_name		varchar(40)	null,
+	antibody_key		int		null,
 	antibody		varchar(255)	null,
 	detection_system	varchar(510)	null,
 	is_direct_detection	int		not null,
@@ -61,6 +62,7 @@ comments = {
 		'primary_id' : 'primary accession ID for this assay',
 		'probe_key' : 'identifies the probe used',
 		'probe_name' : 'name of the probe, cached here from the probe table for convenience',
+		'antibody_key' : 'identifies the antibody used',
 		'antibody' : 'name of the antibody',
 		'detection_system' : 'name of the detection system',
 		'is_direct_detection' : '1 if this used direct detecction, 0 if not',
